[package]
name = "consignment"
version = "0.1.0"
authors = [
    "da1suk8 <42408108+da1suk8@users.noreply.github.com>",
    "loloicci <loloicci@linecorp.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1.5"
cosmwasm-storage = "1.1.5"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }

[dev-dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-vm = { version = "1.1.5", default-features = false, features = ["iterator"] }
wasmer = { version = "2.3", default-features = false, features = ["cranelift", "universal", "singlepass"] }

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }
cosmwasm-vm = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }
cosmwasm-storage = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }
cosmwasm-schema = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }

