[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/Finschia/fnsa-contracts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[workspace.dependencies]
cosmwasm-schema  = "1.1.9"
cosmwasm-std     = "1.1.9"
cosmwasm-storage = "1.1.9"
cw-storage-plus  = "1.1.0"
cw2              = "1.1.0"
finschia-std     = { git = "https://github.com/dudong2/finschia-wasm" }
schemars         = "0.8.12"
serde            = { version = "1.0.167", default-features = false, features = ["derive"] }
thiserror        = "1.0.43"

[patch.crates-io]
cosmwasm-std     = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }
cosmwasm-storage = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }
cosmwasm-schema  = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.7.0-dynamiclink2" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
